ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress-tls-gce
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hello-service
          servicePort: 8086
      - path: /echo
        backend:
          serviceName: hey-service
          servicePort: 8088
